src/test/deca/context/invalid/SansObjet/DeclVar-Mod-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using % operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    float y = 10.01; 
    boolean z = 1.5 % 10.01; 
}
